init: fetch apache kafka 4.1.1 version (branch: 4.1, commit id: be816b82d25370ceac697ccf7c88cea873e9b4e3)