@@ -17,6 +17,7 @@
 package org.apache.kafka.coordinator.group.modern.share;
 
 import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.errors.GroupIdNotFoundException;
 import org.apache.kafka.common.errors.GroupNotEmptyException;
 import org.apache.kafka.common.errors.UnknownMemberIdException;
 import org.apache.kafka.common.message.ShareGroupDescribeResponseData;
@@ -28,23 +29,20 @@ import org.apache.kafka.coordinator.group.Group;
 import org.apache.kafka.coordinator.group.MetadataImageBuilder;
 import org.apache.kafka.coordinator.group.modern.Assignment;
 import org.apache.kafka.coordinator.group.modern.MemberState;
-import org.apache.kafka.coordinator.group.modern.TopicMetadata;
 import org.apache.kafka.coordinator.group.modern.share.ShareGroup.ShareGroupState;
-import org.apache.kafka.image.MetadataImage;
 import org.apache.kafka.timeline.SnapshotRegistry;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 import static org.apache.kafka.common.utils.Utils.mkEntry;
 import static org.apache.kafka.common.utils.Utils.mkMap;
-import static org.apache.kafka.coordinator.group.AssignmentTestUtil.mkAssignment;
-import static org.apache.kafka.coordinator.group.AssignmentTestUtil.mkTopicAssignment;
-import static org.apache.kafka.coordinator.group.CoordinatorRecordHelpersTest.mkMapOfPartitionRacks;
 import static org.apache.kafka.coordinator.group.api.assignor.SubscriptionType.HETEROGENEOUS;
 import static org.apache.kafka.coordinator.group.api.assignor.SubscriptionType.HOMOGENEOUS;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -117,123 +115,6 @@ public class ShareGroupTest {
     }
 
     @Test
-    public void testUpdatingMemberUpdatesPartitionEpoch() {
-        Uuid fooTopicId = Uuid.randomUuid();
-        Uuid barTopicId = Uuid.randomUuid();
-
-        ShareGroup shareGroup = createShareGroup("foo");
-        ShareGroupMember member;
-
-        member = new ShareGroupMember.Builder("member")
-            .setMemberEpoch(10)
-            .setAssignedPartitions(mkAssignment(
-                mkTopicAssignment(fooTopicId, 1, 2, 3)))
-            .build();
-
-        shareGroup.updateMember(member);
-
-        assertEquals(10, shareGroup.currentPartitionEpoch(fooTopicId, 1));
-        assertEquals(10, shareGroup.currentPartitionEpoch(fooTopicId, 2));
-        assertEquals(10, shareGroup.currentPartitionEpoch(fooTopicId, 3));
-        assertEquals(-1, shareGroup.currentPartitionEpoch(barTopicId, 4));
-        assertEquals(-1, shareGroup.currentPartitionEpoch(barTopicId, 5));
-        assertEquals(-1, shareGroup.currentPartitionEpoch(barTopicId, 6));
-
-        member = new ShareGroupMember.Builder(member)
-            .setMemberEpoch(11)
-            .setAssignedPartitions(mkAssignment(
-                mkTopicAssignment(barTopicId, 1, 2, 3)))
-            .build();
-
-        shareGroup.updateMember(member);
-
-        assertEquals(11, shareGroup.currentPartitionEpoch(barTopicId, 1));
-        assertEquals(11, shareGroup.currentPartitionEpoch(barTopicId, 2));
-        assertEquals(11, shareGroup.currentPartitionEpoch(barTopicId, 3));
-        assertEquals(-1, shareGroup.currentPartitionEpoch(fooTopicId, 1));
-        assertEquals(-1, shareGroup.currentPartitionEpoch(fooTopicId, 2));
-        assertEquals(-1, shareGroup.currentPartitionEpoch(fooTopicId, 3));
-    }
-
-    @Test
-    public void testRemovePartitionEpochs() {
-        Uuid fooTopicId = Uuid.randomUuid();
-        ShareGroup shareGroup = createShareGroup("foo");
-
-        // Removing should fail because there is no epoch set.
-        assertThrows(IllegalStateException.class, () -> shareGroup.removePartitionEpochs(
-            mkAssignment(
-                mkTopicAssignment(fooTopicId, 1)
-            ),
-            10
-        ));
-
-        ShareGroupMember m1 = new ShareGroupMember.Builder("m1")
-            .setMemberEpoch(10)
-            .setAssignedPartitions(mkAssignment(
-                mkTopicAssignment(fooTopicId, 1)))
-            .build();
-
-        shareGroup.updateMember(m1);
-
-        // Removing should fail because the expected epoch is incorrect.
-        assertThrows(IllegalStateException.class, () -> shareGroup.removePartitionEpochs(
-            mkAssignment(
-                mkTopicAssignment(fooTopicId, 1)
-            ),
-            11
-        ));
-    }
-
-    @Test
-    public void testAddPartitionEpochs() {
-        Uuid fooTopicId = Uuid.randomUuid();
-        ShareGroup shareGroup = createShareGroup("foo");
-
-        shareGroup.addPartitionEpochs(
-            mkAssignment(
-                mkTopicAssignment(fooTopicId, 1)
-            ),
-            10
-        );
-
-        // Changing the epoch should fail because the owner of the partition
-        // should remove it first.
-        assertThrows(IllegalStateException.class, () -> shareGroup.addPartitionEpochs(
-            mkAssignment(
-                mkTopicAssignment(fooTopicId, 1)
-            ),
-            11
-        ));
-    }
-
-    @Test
-    public void testDeletingMemberRemovesPartitionEpoch() {
-        Uuid fooTopicId = Uuid.randomUuid();
-
-        ShareGroup shareGroup = createShareGroup("foo");
-        ShareGroupMember member;
-
-        member = new ShareGroupMember.Builder("member")
-            .setMemberEpoch(10)
-            .setAssignedPartitions(mkAssignment(
-                mkTopicAssignment(fooTopicId, 1, 2, 3)))
-            .build();
-
-        shareGroup.updateMember(member);
-
-        assertEquals(10, shareGroup.currentPartitionEpoch(fooTopicId, 1));
-        assertEquals(10, shareGroup.currentPartitionEpoch(fooTopicId, 2));
-        assertEquals(10, shareGroup.currentPartitionEpoch(fooTopicId, 3));
-
-        shareGroup.removeMember(member.memberId());
-
-        assertEquals(-1, shareGroup.currentPartitionEpoch(fooTopicId, 1));
-        assertEquals(-1, shareGroup.currentPartitionEpoch(fooTopicId, 2));
-        assertEquals(-1, shareGroup.currentPartitionEpoch(fooTopicId, 3));
-    }
-
-    @Test
     public void testGroupState() {
         ShareGroup shareGroup = createShareGroup("foo");
         assertEquals(ShareGroup.ShareGroupState.EMPTY, shareGroup.state());
@@ -262,215 +143,9 @@ public class ShareGroupTest {
     }
 
     @Test
-    public void testUpdateSubscriptionMetadata() {
-        Uuid fooTopicId = Uuid.randomUuid();
-        Uuid barTopicId = Uuid.randomUuid();
-        Uuid zarTopicId = Uuid.randomUuid();
-
-        MetadataImage image = new MetadataImageBuilder()
-            .addTopic(fooTopicId, "foo", 1)
-            .addTopic(barTopicId, "bar", 2)
-            .addTopic(zarTopicId, "zar", 3)
-            .addRacks()
-            .build();
-
-        ShareGroupMember member1 = new ShareGroupMember.Builder("member1")
-            .setSubscribedTopicNames(Collections.singletonList("foo"))
-            .build();
-        ShareGroupMember member2 = new ShareGroupMember.Builder("member2")
-            .setSubscribedTopicNames(Collections.singletonList("bar"))
-            .build();
-        ShareGroupMember member3 = new ShareGroupMember.Builder("member3")
-            .setSubscribedTopicNames(Collections.singletonList("zar"))
-            .build();
-
-        ShareGroup shareGroup = createShareGroup("group-foo");
-
-        // It should be empty by default.
-        assertEquals(
-            Collections.emptyMap(),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Compute while taking into account member 1.
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(null, member1),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Updating the group with member1.
-        shareGroup.updateMember(member1);
-
-        // It should return foo now.
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Compute while taking into account removal of member 1.
-        assertEquals(
-            Collections.emptyMap(),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(member1, null),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Compute while taking into account member 2.
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1))),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2, mkMapOfPartitionRacks(2)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(null, member2),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Updating the group with member2.
-        shareGroup.updateMember(member2);
-
-        // It should return foo and bar.
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1))),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2, mkMapOfPartitionRacks(2)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Compute while taking into account removal of member 2.
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(member2, null),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Removing member1 results in returning bar.
-        assertEquals(
-            mkMap(
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2, mkMapOfPartitionRacks(2)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(member1, null),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Compute while taking into account member 3.
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1))),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2, mkMapOfPartitionRacks(2))),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3, mkMapOfPartitionRacks(3)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(null, member3),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Updating group with member3.
-        shareGroup.updateMember(member3);
-
-        // It should return foo, bar and zar.
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1))),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2, mkMapOfPartitionRacks(2))),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3, mkMapOfPartitionRacks(3)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Compute while taking into account removal of member 1, member 2 and member 3
-        assertEquals(
-            Collections.emptyMap(),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(new HashSet<>(Arrays.asList(member1, member2, member3))),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Compute while taking into account removal of member 2 and member 3.
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(new HashSet<>(Arrays.asList(member2, member3))),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // Compute while taking into account removal of member 1.
-        assertEquals(
-            mkMap(
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2, mkMapOfPartitionRacks(2))),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3, mkMapOfPartitionRacks(3)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(Collections.singleton(member1)),
-                image.topics(),
-                image.cluster()
-            )
-        );
-
-        // It should return foo, bar and zar.
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1))),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2, mkMapOfPartitionRacks(2))),
-                mkEntry("zar", new TopicMetadata(zarTopicId, "zar", 3, mkMapOfPartitionRacks(3)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(Collections.emptySet()),
-                image.topics(),
-                image.cluster()
-            )
-        );
-    }
-
-    @Test
     public void testUpdateSubscribedTopicNamesAndSubscriptionType() {
         ShareGroupMember member1 = new ShareGroupMember.Builder("member1")
-            .setSubscribedTopicNames(Collections.singletonList("foo"))
+            .setSubscribedTopicNames(List.of("foo"))
             .build();
         ShareGroupMember member2 = new ShareGroupMember.Builder("member2")
             .setSubscribedTopicNames(Arrays.asList("bar", "foo"))
@@ -483,7 +158,7 @@ public class ShareGroupTest {
 
         // It should be empty by default.
         assertEquals(
-            Collections.emptyMap(),
+            Map.of(),
             shareGroup.subscribedTopicNames()
         );
 
@@ -543,9 +218,9 @@ public class ShareGroupTest {
         String memberId2 = "member2";
 
         // Initial assignment for member1
-        Assignment initialAssignment = new Assignment(Collections.singletonMap(
+        Assignment initialAssignment = new Assignment(Map.of(
             topicId,
-            new HashSet<>(Collections.singletonList(0))
+            new HashSet<>(List.of(0))
         ));
         shareGroup.updateTargetAssignment(memberId1, initialAssignment);
 
@@ -558,9 +233,9 @@ public class ShareGroupTest {
         );
 
         // New assignment for member1
-        Assignment newAssignment = new Assignment(Collections.singletonMap(
+        Assignment newAssignment = new Assignment(Map.of(
             topicId,
-            new HashSet<>(Collections.singletonList(1))
+            new HashSet<>(List.of(1))
         ));
         shareGroup.updateTargetAssignment(memberId1, newAssignment);
 
@@ -573,9 +248,9 @@ public class ShareGroupTest {
         );
 
         // New assignment for member2 to add partition 1
-        Assignment newAssignment2 = new Assignment(Collections.singletonMap(
+        Assignment newAssignment2 = new Assignment(Map.of(
             topicId,
-            new HashSet<>(Collections.singletonList(1))
+            new HashSet<>(List.of(1))
         ));
         shareGroup.updateTargetAssignment(memberId2, newAssignment2);
 
@@ -588,9 +263,9 @@ public class ShareGroupTest {
         );
 
         // New assignment for member1 to revoke partition 1 and assign partition 0
-        Assignment newAssignment1 = new Assignment(Collections.singletonMap(
+        Assignment newAssignment1 = new Assignment(Map.of(
             topicId,
-            new HashSet<>(Collections.singletonList(0))
+            new HashSet<>(List.of(0))
         ));
         shareGroup.updateTargetAssignment(memberId1, newAssignment1);
 
@@ -670,7 +345,7 @@ public class ShareGroupTest {
     @ApiKeyVersionsSource(apiKey = ApiKeys.OFFSET_COMMIT)
     public void testValidateOffsetCommit(short version) {
         ShareGroup shareGroup = createShareGroup("group-foo");
-        assertThrows(UnsupportedOperationException.class, () ->
+        assertThrows(GroupIdNotFoundException.class, () ->
             shareGroup.validateOffsetCommit(null, null, -1, false, version));
     }
 
@@ -678,13 +353,13 @@ public class ShareGroupTest {
     public void testAsListedGroup() {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(new LogContext());
         ShareGroup shareGroup = new ShareGroup(snapshotRegistry, "group-foo");
-        snapshotRegistry.getOrCreateSnapshot(0);
+        snapshotRegistry.idempotentCreateSnapshot(0);
         assertEquals(ShareGroupState.EMPTY, shareGroup.state(0));
         assertEquals("Empty", shareGroup.stateAsString(0));
         shareGroup.updateMember(new ShareGroupMember.Builder("member1")
-            .setSubscribedTopicNames(Collections.singletonList("foo"))
+            .setSubscribedTopicNames(List.of("foo"))
             .build());
-        snapshotRegistry.getOrCreateSnapshot(1);
+        snapshotRegistry.idempotentCreateSnapshot(1);
         assertEquals(ShareGroupState.EMPTY, shareGroup.state(0));
         assertEquals("Empty", shareGroup.stateAsString(0));
         assertEquals(ShareGroupState.STABLE, shareGroup.state(1));
@@ -700,14 +375,14 @@ public class ShareGroupTest {
     @Test
     public void testValidateOffsetFetch() {
         ShareGroup shareGroup = createShareGroup("group-foo");
-        assertThrows(UnsupportedOperationException.class, () ->
+        assertThrows(GroupIdNotFoundException.class, () ->
             shareGroup.validateOffsetFetch(null, -1, -1));
     }
 
     @Test
     public void testValidateOffsetDelete() {
         ShareGroup shareGroup = createShareGroup("group-foo");
-        assertThrows(UnsupportedOperationException.class, shareGroup::validateOffsetDelete);
+        assertThrows(GroupIdNotFoundException.class, shareGroup::validateOffsetDelete);
     }
 
     @Test
@@ -739,38 +414,17 @@ public class ShareGroupTest {
 
     @Test
     public void testIsSubscribedToTopic() {
-        Uuid fooTopicId = Uuid.randomUuid();
-        Uuid barTopicId = Uuid.randomUuid();
-
-        MetadataImage image = new MetadataImageBuilder()
-            .addTopic(fooTopicId, "foo", 1)
-            .addTopic(barTopicId, "bar", 2)
-            .addRacks()
-            .build();
-
         ShareGroupMember member1 = new ShareGroupMember.Builder("member1")
-            .setSubscribedTopicNames(Collections.singletonList("foo"))
+            .setSubscribedTopicNames(List.of("foo"))
             .build();
         ShareGroupMember member2 = new ShareGroupMember.Builder("member2")
-            .setSubscribedTopicNames(Collections.singletonList("bar"))
+            .setSubscribedTopicNames(List.of("bar"))
             .build();
 
         ShareGroup shareGroup = createShareGroup("group-foo");
 
         shareGroup.updateMember(member1);
         shareGroup.updateMember(member2);
-
-        assertEquals(
-            mkMap(
-                mkEntry("foo", new TopicMetadata(fooTopicId, "foo", 1, mkMapOfPartitionRacks(1))),
-                mkEntry("bar", new TopicMetadata(barTopicId, "bar", 2, mkMapOfPartitionRacks(2)))
-            ),
-            shareGroup.computeSubscriptionMetadata(
-                shareGroup.computeSubscribedTopicNames(null, null),
-                image.topics(),
-                image.cluster()
-            )
-        );
 
         assertTrue(shareGroup.isSubscribedToTopic("foo"));
         assertTrue(shareGroup.isSubscribedToTopic("bar"));
@@ -786,15 +440,15 @@ public class ShareGroupTest {
     public void testAsDescribedGroup() {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(new LogContext());
         ShareGroup shareGroup = new ShareGroup(snapshotRegistry, "group-id-1");
-        snapshotRegistry.getOrCreateSnapshot(0);
+        snapshotRegistry.idempotentCreateSnapshot(0);
         assertEquals(ShareGroupState.EMPTY.toString(), shareGroup.stateAsString(0));
 
         shareGroup.updateMember(new ShareGroupMember.Builder("member1")
-                .setSubscribedTopicNames(Collections.singletonList("foo"))
+                .setSubscribedTopicNames(List.of("foo"))
                 .build());
         shareGroup.updateMember(new ShareGroupMember.Builder("member2")
                 .build());
-        snapshotRegistry.getOrCreateSnapshot(1);
+        snapshotRegistry.idempotentCreateSnapshot(1);
 
         ShareGroupDescribeResponseData.DescribedGroup expected = new ShareGroupDescribeResponseData.DescribedGroup()
             .setGroupId("group-id-1")
@@ -805,7 +459,7 @@ public class ShareGroupTest {
             .setMembers(Arrays.asList(
                 new ShareGroupDescribeResponseData.Member()
                     .setMemberId("member1")
-                    .setSubscribedTopicNames(Collections.singletonList("foo")),
+                    .setSubscribedTopicNames(List.of("foo")),
                 new ShareGroupDescribeResponseData.Member().setMemberId("member2")
             ));
         ShareGroupDescribeResponseData.DescribedGroup actual = shareGroup.asDescribedGroup(1, "assignorName",
@@ -818,17 +472,17 @@ public class ShareGroupTest {
     public void testIsInStatesCaseInsensitive() {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(new LogContext());
         ShareGroup shareGroup = new ShareGroup(snapshotRegistry, "group-foo");
-        snapshotRegistry.getOrCreateSnapshot(0);
-        assertTrue(shareGroup.isInStates(Collections.singleton("empty"), 0));
-        assertFalse(shareGroup.isInStates(Collections.singleton("Empty"), 0));
+        snapshotRegistry.idempotentCreateSnapshot(0);
+        assertTrue(shareGroup.isInStates(Set.of("empty"), 0));
+        assertFalse(shareGroup.isInStates(Set.of("Empty"), 0));
 
         shareGroup.updateMember(new ShareGroupMember.Builder("member1")
-            .setSubscribedTopicNames(Collections.singletonList("foo"))
+            .setSubscribedTopicNames(List.of("foo"))
             .build());
-        snapshotRegistry.getOrCreateSnapshot(1);
-        assertTrue(shareGroup.isInStates(Collections.singleton("empty"), 0));
-        assertTrue(shareGroup.isInStates(Collections.singleton("stable"), 1));
-        assertFalse(shareGroup.isInStates(Collections.singleton("empty"), 1));
+        snapshotRegistry.idempotentCreateSnapshot(1);
+        assertTrue(shareGroup.isInStates(Set.of("empty"), 0));
+        assertTrue(shareGroup.isInStates(Set.of("stable"), 1));
+        assertFalse(shareGroup.isInStates(Set.of("empty"), 1));
     }
 
     private ShareGroup createShareGroup(String groupId) {
