@@ -42,13 +42,12 @@ import org.apache.kafka.common.network.ListenerName;
 import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.ApiMessage;
 import org.apache.kafka.common.protocol.Errors;
+import org.apache.kafka.server.common.OffsetAndEpoch;
 
 import java.net.InetSocketAddress;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.Random;
 import java.util.function.Consumer;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
@@ -57,24 +56,16 @@ import java.util.stream.Collectors;
 public class RaftUtil {
 
     public static ApiMessage errorResponse(ApiKeys apiKey, Errors error) {
-        switch (apiKey) {
-            case VOTE:
-                return new VoteResponseData().setErrorCode(error.code());
-            case BEGIN_QUORUM_EPOCH:
-                return new BeginQuorumEpochResponseData().setErrorCode(error.code());
-            case END_QUORUM_EPOCH:
-                return new EndQuorumEpochResponseData().setErrorCode(error.code());
-            case FETCH:
-                return new FetchResponseData().setErrorCode(error.code());
-            case FETCH_SNAPSHOT:
-                return new FetchSnapshotResponseData().setErrorCode(error.code());
-            case API_VERSIONS:
-                return new ApiVersionsResponseData().setErrorCode(error.code());
-            case UPDATE_RAFT_VOTER:
-                return new UpdateRaftVoterResponseData().setErrorCode(error.code());
-            default:
-                throw new IllegalArgumentException("Received response for unexpected request type: " + apiKey);
-        }
+        return switch (apiKey) {
+            case VOTE -> new VoteResponseData().setErrorCode(error.code());
+            case BEGIN_QUORUM_EPOCH -> new BeginQuorumEpochResponseData().setErrorCode(error.code());
+            case END_QUORUM_EPOCH -> new EndQuorumEpochResponseData().setErrorCode(error.code());
+            case FETCH -> new FetchResponseData().setErrorCode(error.code());
+            case FETCH_SNAPSHOT -> new FetchSnapshotResponseData().setErrorCode(error.code());
+            case API_VERSIONS -> new ApiVersionsResponseData().setErrorCode(error.code());
+            case UPDATE_RAFT_VOTER -> new UpdateRaftVoterResponseData().setErrorCode(error.code());
+            default -> throw new IllegalArgumentException("Received response for unexpected request type: " + apiKey);
+        };
     }
 
     public static FetchRequestData singletonFetchRequest(
@@ -91,10 +82,10 @@ public class RaftUtil {
             new FetchRequestData.FetchTopic()
                 .setTopic(topicPartition.topic())
                 .setTopicId(topicId)
-                .setPartitions(Collections.singletonList(fetchPartition));
+                .setPartitions(List.of(fetchPartition));
 
         return new FetchRequestData()
-            .setTopics(Collections.singletonList(fetchTopic));
+            .setTopics(List.of(fetchTopic));
     }
 
     public static FetchResponseData singletonFetchResponse(
@@ -118,7 +109,7 @@ public class RaftUtil {
             new FetchResponseData.FetchableTopicResponse()
                 .setTopic(topicPartition.topic())
                 .setTopicId(topicId)
-                .setPartitions(Collections.singletonList(fetchablePartition));
+                .setPartitions(List.of(fetchablePartition));
 
         FetchResponseData response = new FetchResponseData();
 
@@ -139,33 +130,34 @@ public class RaftUtil {
 
         return response
             .setErrorCode(topLevelError.code())
-            .setResponses(Collections.singletonList(fetchableTopic));
+            .setResponses(List.of(fetchableTopic));
     }
 
     public static VoteRequestData singletonVoteRequest(
         TopicPartition topicPartition,
         String clusterId,
-        int candidateEpoch,
-        ReplicaKey candidateKey,
+        int replicaEpoch,
+        ReplicaKey replicaKey,
         ReplicaKey voterKey,
         int lastEpoch,
-        long lastEpochEndOffset
+        long lastEpochEndOffset,
+        boolean preVote
     ) {
         return new VoteRequestData()
             .setClusterId(clusterId)
             .setVoterId(voterKey.id())
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new VoteRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new VoteRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
-                                    .setCandidateEpoch(candidateEpoch)
-                                    .setCandidateId(candidateKey.id())
-                                    .setCandidateDirectoryId(
-                                        candidateKey
+                                    .setReplicaEpoch(replicaEpoch)
+                                    .setReplicaId(replicaKey.id())
+                                    .setReplicaDirectoryId(
+                                        replicaKey
                                             .directoryId()
                                             .orElse(ReplicaKey.NO_DIRECTORY_ID)
                                     )
@@ -176,6 +168,7 @@ public class RaftUtil {
                                     )
                                     .setLastOffsetEpoch(lastEpoch)
                                     .setLastOffset(lastEpochEndOffset)
+                                    .setPreVote(preVote)
                             )
                         )
                 )
@@ -193,17 +186,18 @@ public class RaftUtil {
         boolean voteGranted,
         Endpoints endpoints
     ) {
+        VoteResponseData.PartitionData partitionData = new VoteResponseData.PartitionData()
+            .setErrorCode(partitionLevelError.code())
+            .setLeaderId(leaderId)
+            .setLeaderEpoch(leaderEpoch)
+            .setVoteGranted(voteGranted);
+
         VoteResponseData response = new VoteResponseData()
             .setErrorCode(topLevelError.code())
-            .setTopics(Collections.singletonList(
+            .setTopics(List.of(
                 new VoteResponseData.TopicData()
                     .setTopicName(topicPartition.topic())
-                    .setPartitions(Collections.singletonList(
-                        new VoteResponseData.PartitionData()
-                            .setErrorCode(partitionLevelError.code())
-                            .setLeaderId(leaderId)
-                            .setLeaderEpoch(leaderEpoch)
-                            .setVoteGranted(voteGranted)))));
+                    .setPartitions(List.of(partitionData))));
 
         if (apiVersion >= 1) {
             Optional<InetSocketAddress> address = endpoints.address(listenerName);
@@ -248,10 +242,10 @@ public class RaftUtil {
             .setReplicaId(replicaKey.id())
             .setMaxBytes(maxBytes)
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new FetchSnapshotRequestData.TopicSnapshot()
                         .setName(topicPartition.topic())
-                        .setPartitions(Collections.singletonList(partitionSnapshot))
+                        .setPartitions(List.of(partitionSnapshot))
                 )
             );
     }
@@ -283,10 +277,10 @@ public class RaftUtil {
 
         FetchSnapshotResponseData response = new FetchSnapshotResponseData()
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new FetchSnapshotResponseData.TopicSnapshot()
                         .setName(topicPartition.topic())
-                        .setPartitions(Collections.singletonList(partitionSnapshot))
+                        .setPartitions(List.of(partitionSnapshot))
                 )
             );
 
@@ -321,11 +315,11 @@ public class RaftUtil {
             .setClusterId(clusterId)
             .setVoterId(voterKey.id())
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new BeginQuorumEpochRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new BeginQuorumEpochRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setLeaderEpoch(leaderEpoch)
@@ -351,11 +345,11 @@ public class RaftUtil {
         BeginQuorumEpochResponseData response = new BeginQuorumEpochResponseData()
             .setErrorCode(topLevelError.code())
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new BeginQuorumEpochResponseData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new BeginQuorumEpochResponseData.PartitionData()
                                     .setErrorCode(partitionLevelError.code())
                                     .setLeaderId(leaderId)
@@ -407,11 +401,11 @@ public class RaftUtil {
         return new EndQuorumEpochRequestData()
             .setClusterId(clusterId)
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new EndQuorumEpochRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new EndQuorumEpochRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setLeaderEpoch(leaderEpoch)
@@ -437,10 +431,10 @@ public class RaftUtil {
     ) {
         EndQuorumEpochResponseData response = new EndQuorumEpochResponseData()
                    .setErrorCode(topLevelError.code())
-                   .setTopics(Collections.singletonList(
+                   .setTopics(List.of(
                        new EndQuorumEpochResponseData.TopicData()
                            .setTopicName(topicPartition.topic())
-                           .setPartitions(Collections.singletonList(
+                           .setPartitions(List.of(
                                new EndQuorumEpochResponseData.PartitionData()
                                    .setErrorCode(partitionLevelError.code())
                                    .setLeaderId(leaderId)
@@ -474,11 +468,11 @@ public class RaftUtil {
 
         return new DescribeQuorumRequestData()
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new DescribeQuorumRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new DescribeQuorumRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                             )
@@ -499,11 +493,11 @@ public class RaftUtil {
     ) {
         DescribeQuorumResponseData response = new DescribeQuorumResponseData()
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new DescribeQuorumResponseData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new DescribeQuorumResponseData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setErrorCode(Errors.NONE.code())
@@ -607,11 +601,9 @@ public class RaftUtil {
             .setLeaderEpoch(leaderAndEpoch.epoch());
 
         Optional<InetSocketAddress> address = endpoints.address(listenerName);
-        if (address.isPresent()) {
-            response.currentLeader()
-                .setHost(address.get().getHostString())
-                .setPort(address.get().getPort());
-        }
+        address.ifPresent(inetSocketAddress -> response.currentLeader()
+            .setHost(inetSocketAddress.getHostString())
+            .setPort(inetSocketAddress.getPort()));
 
         return response;
     }
@@ -762,19 +754,5 @@ public class RaftUtil {
                    data.topics().get(0).topicName().equals(topicPartition.topic()) &&
                    data.topics().get(0).partitions().size() == 1 &&
                    data.topics().get(0).partitions().get(0).partitionIndex() == topicPartition.partition();
-    }
-
-    static int binaryExponentialElectionBackoffMs(int backoffMaxMs, int backoffBaseMs, int retries, Random random) {
-        if (retries <= 0) {
-            throw new IllegalArgumentException("Retries " + retries + " should be larger than zero");
-        }
-        // Takes minimum of the following:
-        // 1. exponential backoff calculation (maxes out at 102.5 seconds with backoffBaseMs of 50ms)
-        // 2. configurable electionBackoffMaxMs + jitter
-        // The jitter is added to prevent livelock of elections.
-        return Math.min(
-            backoffBaseMs * (1 + random.nextInt(2 << Math.min(10, retries - 1))),
-            backoffMaxMs + random.nextInt(backoffBaseMs)
-        );
     }
 }
