@@ -21,9 +21,9 @@ import org.apache.kafka.clients.admin.Admin;
 import org.apache.kafka.clients.admin.AdminClientConfig;
 import org.apache.kafka.clients.admin.AlterConfigOp;
 import org.apache.kafka.clients.admin.AlterConfigsOptions;
-import org.apache.kafka.clients.admin.ClientMetricsResourceListing;
 import org.apache.kafka.clients.admin.Config;
 import org.apache.kafka.clients.admin.ConfigEntry;
+import org.apache.kafka.clients.admin.ListConfigResourcesOptions;
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.config.ConfigResource;
 import org.apache.kafka.common.utils.Exit;
@@ -43,12 +43,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import joptsimple.ArgumentAcceptingOptionSpec;
+import joptsimple.OptionException;
 import joptsimple.OptionSpec;
 import joptsimple.OptionSpecBuilder;
 
@@ -154,11 +156,19 @@ public class ClientMetricsCommand {
 
             List<String> entities;
             if (entityNameOpt.isPresent()) {
+                if (adminClient.listConfigResources(Set.of(ConfigResource.Type.CLIENT_METRICS), new ListConfigResourcesOptions())
+                        .all().get(30, TimeUnit.SECONDS).stream()
+                        .noneMatch(resource -> resource.name().equals(entityNameOpt.get()))) {
+                    System.out.println("The client metric resource " + entityNameOpt.get() + " doesn't exist and doesn't have dynamic config.");
+                    return;
+                }
                 entities = Collections.singletonList(entityNameOpt.get());
             } else {
-                Collection<ClientMetricsResourceListing> resources = adminClient.listClientMetricsResources()
-                        .all().get(30, TimeUnit.SECONDS);
-                entities = resources.stream().map(ClientMetricsResourceListing::name).collect(Collectors.toList());
+                Collection<ConfigResource> resources = adminClient
+                    .listConfigResources(Set.of(ConfigResource.Type.CLIENT_METRICS), new ListConfigResourcesOptions())
+                    .all()
+                    .get(30, TimeUnit.SECONDS);
+                entities = resources.stream().map(ConfigResource::name).toList();
             }
 
             for (String entity : entities) {
@@ -169,9 +179,11 @@ public class ClientMetricsCommand {
         }
 
         public void listClientMetrics() throws Exception {
-            Collection<ClientMetricsResourceListing> resources = adminClient.listClientMetricsResources()
-                    .all().get(30, TimeUnit.SECONDS);
-            String results = resources.stream().map(ClientMetricsResourceListing::name).collect(Collectors.joining("\n"));
+            Collection<ConfigResource> resources = adminClient
+                .listConfigResources(Set.of(ConfigResource.Type.CLIENT_METRICS), new ListConfigResourcesOptions())
+                .all()
+                .get(30, TimeUnit.SECONDS);
+            String results = resources.stream().map(ConfigResource::name).collect(Collectors.joining("\n"));
             System.out.println(results);
         }
 
@@ -261,7 +273,11 @@ public class ClientMetricsCommand {
                 .ofType(String.class)
                 .withValuesSeparatedBy(',');
 
-            options = parser.parse(args);
+            try {
+                options = parser.parse(args);
+            } catch (OptionException oe) {
+                CommandLineUtils.printUsageAndExit(parser, oe.getMessage());
+            }
 
             checkArgs();
         }
